[package]
name = "libpam-web3-cardano"
version = "0.1.0"
edition = "2021"
description = "Cardano verification plugin for libpam-web3"
license = "MIT"

[[bin]]
name = "cardano"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CBOR decoding (for COSE_Key from CIP-30 signData)
ciborium = "0.2"

# Address derivation
blake2 = "0.10"
bech32 = "0.11"
hex = "0.4"
