[package]
name = "libpam-web3-cardano"
version = "0.1.0"
edition = "2021"
description = "Cardano verification plugin for libpam-web3"
license = "MIT"

[[bin]]
name = "cardano"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Address derivation. The auth-svc has already CBOR-decoded the
# CIP-30 COSE_Key and emits the raw 32-byte Ed25519 pubkey hex in
# the .sig file, so the plugin doesn't need a CBOR parser.
blake2 = "0.10"
bech32 = "0.11"
hex = "0.4"
